--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "git": "^0.1.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "3.0.0",
+    "react-native-web": "0.0.80"
   },
   "scripts": {
     "start": "react-scripts start",
